--- a/data/Drug_Induced_Liver_Injury/example_processing_and_templates.ipynb
+++ b/data/Drug_Induced_Liver_Injury/example_processing_and_templates.ipynb
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "100%|██████████████████████████████████████| 26.7k/26.7k [00:00<00:00, 203kiB/s]\n",
+      "100%|██████████████████████████████████████| 26.7k/26.7k [00:00<00:00, 198kiB/s]\n",
       "Loading...\n",
       "Done!\n"
      ]
@@ -114,11 +114,11 @@
      "output_type": "stream",
      "text": [
       "total 84K\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  2 06:22 data\r\n",
-      "-rw-rw-r-- 1 melo melo  26K مار  2 06:22 data_original.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  39K مار  2 06:19 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.9K مار  2 06:19 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 4.9K مار  2 06:18 transform.py\r\n"
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:53 data\r\n",
+      "-rw-rw-r-- 1 melo melo  26K مار  2 16:53 data_original.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  37K مار  2 16:53 example_processing_and_templates.ipynb\r\n",
+      "-rw-rw-r-- 1 melo melo 1.7K مار  2 06:31 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 5.0K مار  2 06:30 transform.py\r\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "08197f62",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "a46dd8ff-37b3-4894-8226-3bf98226dd09",
    "metadata": {
     "tags": []
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "785d37cb-1fb4-4a91-a923-d5a78a37f36a",
    "metadata": {
     "tags": []
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8b4cde30",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "1bf212cb-1653-457b-9f5d-416d4dd14b53",
    "metadata": {
     "tags": []
@@ -417,7 +417,7 @@
        "4        444.0                CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1           0.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "d544fa60-343e-40e1-bd0c-4750f07a7145",
    "metadata": {
     "tags": []
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "d6d5efa5-b4b4-4a25-8626-e10f3d691e83",
    "metadata": {
     "tags": []
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "727f8d7b-cbb6-43c7-9eab-9d4d65be6b3f",
    "metadata": {
     "tags": []
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "63c8d4a4-906e-418d-be39-879365b4dfa0",
    "metadata": {
     "tags": []
@@ -482,7 +482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 26K مار  2 06:23 data_clean.csv\r\n"
+      "-rw-rw-r-- 1 melo melo 26K مار  2 16:53 data_clean.csv\r\n"
      ]
     }
    ],
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "a51b9001-25d7-4e0e-a607-477cfc4a9f1c",
    "metadata": {
     "tags": []
@@ -516,8 +516,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "1a512943-4909-4d56-867d-50c151d8d607",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>compound_id</th>\n",
+       "      <th>SMILES</th>\n",
+       "      <th>liver_injury</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>187.0</td>\n",
+       "      <td>CC(=O)OCC[N+](C)(C)C</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>247.0</td>\n",
+       "      <td>C[N+](C)(C)CC(=O)[O-]</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>298.0</td>\n",
+       "      <td>O=C(NC(CO)C(O)c1ccc([N+](=O)[O-])cc1)C(Cl)Cl</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>338.0</td>\n",
+       "      <td>O=C(O)c1ccccc1O</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>444.0</td>\n",
+       "      <td>CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   compound_id                                        SMILES  liver_injury\n",
+       "0        187.0                          CC(=O)OCC[N+](C)(C)C           0.0\n",
+       "1        247.0                         C[N+](C)(C)CC(=O)[O-]           0.0\n",
+       "2        298.0  O=C(NC(CO)C(O)c1ccc([N+](=O)[O-])cc1)C(Cl)Cl           0.0\n",
+       "3        338.0                               O=C(O)c1ccccc1O           0.0\n",
+       "4        444.0                CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1           0.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3d730ce-fce0-49df-9eb8-b917e945fa9a",
+   "metadata": {},
+   "source": [
+    "## Load from csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "077b0c5f-8772-4879-9317-3fa28799689b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fn_data_csv = \"data_clean.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6eaef0e6-2115-4793-ac43-a196b25d47a0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(fn_data_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "43619e7c-9c82-4ff0-ae25-403861304635",
    "metadata": {
     "tags": []
    },
@@ -603,125 +722,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3d730ce-fce0-49df-9eb8-b917e945fa9a",
-   "metadata": {},
-   "source": [
-    "## Load from csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "077b0c5f-8772-4879-9317-3fa28799689b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fn_data_csv = \"data_clean.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "6eaef0e6-2115-4793-ac43-a196b25d47a0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(fn_data_csv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "43619e7c-9c82-4ff0-ae25-403861304635",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>compound_id</th>\n",
-       "      <th>SMILES</th>\n",
-       "      <th>liver_injury</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>187.0</td>\n",
-       "      <td>CC(=O)OCC[N+](C)(C)C</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>247.0</td>\n",
-       "      <td>C[N+](C)(C)CC(=O)[O-]</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>298.0</td>\n",
-       "      <td>O=C(NC(CO)C(O)c1ccc([N+](=O)[O-])cc1)C(Cl)Cl</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>338.0</td>\n",
-       "      <td>O=C(O)c1ccccc1O</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>444.0</td>\n",
-       "      <td>CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   compound_id                                        SMILES  liver_injury\n",
-       "0        187.0                          CC(=O)OCC[N+](C)(C)C           0.0\n",
-       "1        247.0                         C[N+](C)(C)CC(=O)[O-]           0.0\n",
-       "2        298.0  O=C(NC(CO)C(O)c1ccc([N+](=O)[O-])cc1)C(Cl)Cl           0.0\n",
-       "3        338.0                               O=C(O)c1ccccc1O           0.0\n",
-       "4        444.0                CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1           0.0"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2f06e57c-02c5-493b-af65-c8bb9ac59421",
    "metadata": {},
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "49771077-471d-4d71-a9a7-d6b094bbc4f3",
    "metadata": {
     "tags": []
@@ -806,7 +806,7 @@
        "4        444.0                CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1           0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -848,16 +848,6 @@
     "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "            \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "        },\n",
-    "        {\n",
-    "            \"id\": \"compound_id\",\n",
-    "            \"type\": \"Other\",\n",
-    "            \"description\": \"random drug id\",\n",
-    "            \"names\": [\n",
-    "                \"compound\",\n",
-    "                \"compound id\",\n",
-    "                \"random id\",\n",
-    "            ],\n",
-    "        },\n",
     "    ],\n",
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
@@ -887,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "ec455cf0-962a-4c0d-bb3e-066e415ffd9b",
    "metadata": {
     "tags": []
@@ -911,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -923,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -936,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
@@ -946,7 +936,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 melo melo 1.6K مار  2 06:27 meta.yaml\r\n"
+      "-rw-rw-r-- 1 melo melo 1.5K مار  2 16:53 meta.yaml\r\n"
      ]
     }
    ],
@@ -956,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -987,13 +977,6 @@
       "- id: SMILES\r\n",
       "  type: SMILES\r\n",
       "  description: SMILES\r\n",
-      "- id: compound_id\r\n",
-      "  type: Other\r\n",
-      "  description: random drug id\r\n",
-      "  names:\r\n",
-      "  - compound\r\n",
-      "  - compound id\r\n",
-      "  - random id\r\n",
       "license: CC BY 4.0\r\n",
       "links:\r\n",
       "- url: https://doi.org/10.1021/acs.jcim.5b00238\r\n",
@@ -1031,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1043,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1128,16 +1111,6 @@
     "                    \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "                    \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "                },\n",
-    "                {\n",
-    "                    \"id\": \"compound_id\",\n",
-    "                    \"type\": \"Other\",\n",
-    "                    \"description\": \"random drug id\",\n",
-    "                    \"names\": [\n",
-    "                        \"compound\",\n",
-    "                        \"compound id\",\n",
-    "                        \"random id\",\n",
-    "                    ],\n",
-    "                },\n",
     "            ],\n",
     "            \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "            \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
@@ -1189,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
@@ -1199,11 +1172,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading...\n",
-      "100%|██████████████████████████████████████| 26.7k/26.7k [00:00<00:00, 207kiB/s]\n",
-      "Loading...\n",
-      "Done!\n",
-      "Finished processing Drug_Induced_Liver_Injury dataset!\n"
+      "Found local copy...\r\n",
+      "Loading...\r\n",
+      "Done!\r\n",
+      "Finished processing Drug_Induced_Liver_Injury dataset!\r\n"
      ]
     }
    ],
@@ -1213,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "953e7bee-bd5e-41d0-a2be-506e0bc97727",
    "metadata": {
     "tags": []
@@ -1224,12 +1196,12 @@
      "output_type": "stream",
      "text": [
       "total 112K\r\n",
-      "drwxrwxr-x 2 melo melo 4.0K مار  2 06:31 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
-      "-rw-rw-r-- 1 melo melo  26K مار  2 06:31 data_clean.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  26K مار  2 06:31 data_original.csv\r\n",
-      "-rw-rw-r-- 1 melo melo  37K مار  2 06:29 example_processing_and_templates.ipynb\r\n",
-      "-rw-rw-r-- 1 melo melo 1.7K مار  2 06:31 meta.yaml\r\n",
-      "-rw-rw-r-- 1 melo melo 5.0K مار  2 06:30 transform.py\r\n"
+      "drwxrwxr-x 2 melo melo 4.0K مار  2 16:53 \u001b[0m\u001b[01;34mdata\u001b[0m/\r\n",
+      "-rw-rw-r-- 1 melo melo  26K مار  2 16:53 data_clean.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  26K مار  2 16:53 data_original.csv\r\n",
+      "-rw-rw-r-- 1 melo melo  37K مار  2 16:53 example_processing_and_templates.ipynb\r\n",
+      "-rw-rw-r-- 1 melo melo 1.6K مار  2 16:53 meta.yaml\r\n",
+      "-rw-rw-r-- 1 melo melo 4.7K مار  2 16:53 transform.py\r\n"
      ]
     }
    ],
