update metadata file type field to continuous

--- a/data/Drug_target_interaction/example_processing_and_templates.ipynb
+++ b/data/Drug_target_interaction/example_processing_and_templates.ipynb
@@ -932,7 +932,7 @@
     "            \"id\": \"binding\",  # name of the column in a tabular dataset\n",
     "            \"description\": \"small-molecule protein interaction.\",  # description of what this column means\n",
     "            \"units\": \"Kd\",  # units of the values in this column (leave empty if unitless)\n",
-    "            \"type\": \"regression\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
+    "            \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
     "            \"names\": [  # names for the property (to sample from for building the prompts)\n",
     "                \"Drug-Target Interaction\"\n",
     "                \"small-molecule binding affinity\",\n",
