--- a/data/Drug_target_interaction/example_processing_and_templates.ipynb
+++ b/data/Drug_target_interaction/example_processing_and_templates.ipynb
@@ -970,7 +970,13 @@
     "            \"description\": \"corresponding publication\",\n",
     "        },\n",
     "    ],\n",
-    "    \"split_col\": \"split\",\n",
+    "    \"benchmarks\": [\n",
+    "        {\n",
+    "            \"name\": \"TDC\",\n",
+    "            \"link\": \"https://tdcommons.ai/\",\n",
+    "            \"split_column\": \"split\",\n",
+    "        },\n",
+    "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "    \"bibtex\": [\n",
     "        \"\"\"@article{Liu2006bindingdb,\n",
